[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono ="0.4.22"
tokio = { version = "1.21.2", features = ["full"] }
humantime = "2.1.0"

[lib]
name="demo"
path="src/lib/mod.rs"