[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono ="0.4.22"
tokio = { version = "1.21.2", features = ["full"] }
humantime = "2.1.0"
thiserror= "1.0.3"
crossbeam-channel ="*"
colored="*"
[dev-dependencies]
anyhow = "1.0.66"
